# roesti

./: .gitignore  Cargo.toml  code-coverage.sh  roesti-lib.rs  roesti-main.rs
.github/workflows/: build-and-test.yml
dynamic_services_derive/: Cargo.toml
dynamic_services_derive/src/: lib.rs
hello_macro_derive/src/: lib.rs
src/: consumer1.rs  consumer2.rs  consumer3.rs  lib.rs  location.rs  service_registry.rs  sunlight_service.rs  test_service_registry.rs  test_tidal_service_registry.rs  tidal_service.rs
