[package]
name = "roesti"
version = "0.1.0"
edition = "2021"

[dependencies]
dynamic_services_derive = { path = "./dynamic_services_derive" }
once_cell = "1"
uuid = { version = "1", features = ["v4"]}

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1
strip = true
