[package]
name = "roesti"
version = "0.1.0"
edition = "2021"

[dependencies]
dynamic_services = { path = "../dynamic_services" }
dynamic_services_derive = { path = "../dynamic_services_derive" }
once_cell = "1.20.2"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1
strip = true
